# fastdns

./: LICENSE  README.md  autogen.sh  configure.ac
src/: Makefile.am  fastdns.cpp
